added more views

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,8 @@
     <article class="post">
+      <div class="title">
+        <a href="{{body}}" target="_blank">{{title}}</a>
+      </div>
       <div class="meta">
-        Post by {{user.username}} on
-        {{format_date created_at}}
         |
         <a href="/post/{{id}}">{{comments.length}} {{format_plural 'comment' comments.length}}</a>
       </div>
