--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,9 +1,9 @@
     <article class="post">
       <div class="title">
-        <h2>{{title}}</h2>
+        <a href="/post/{{id}}">{{title}}</a>
+        <span>posted by {{user.username}} on {{format_date created_at}}</span>
       </div>
       <div class="meta">
-        <p>{{format_date created_at}}</p>
-        <a href="/post/{{id}}">{{comments.length}} {{format_plural 'comment' comments.length}}</a>
+        <p>{{body}}</p>
       </div>
     </article>
