--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,8 @@
 * {
     box-sizing: border-box;
   }
-  
+
+
   body, html {
     height: 100%;
     padding: 0;
@@ -12,13 +13,13 @@
   
   a {
     text-decoration: none;
-    color: #225ca3;
+    color: rgb(220, 233, 213);
     font-weight: bold;
     transition: color .1s;
   }
   
   a:hover {
-    color: #3486eb;
+    color: rgba(220, 233, 213, 0.5);
   }
   
   button {
@@ -37,89 +38,122 @@
   }
   
   .post-list {
-    margin: 0;
-    padding: 0;
+    list-style: none;
   }
   
-  textarea, input {
+  /* textarea, input {
     padding: .5%;
     border-radius: 5px;
     border: 1px solid #ccc;
-  }
+  } */
   
-  textarea:focus, input:focus {
+  /* textarea:focus, input:focus {
     outline: none;
     border: 1px solid #3486eb;
-  }
+  } */
   
-  textarea {
+  /* textarea {
     min-width: 40%;
     min-height: 100px;
-  }
+  } */
   
-  form > div {
+  /* form > div {
     margin-bottom: 2%;
-  }
+  } */
   
-  form label {
+  /* form label {
     display: block;
-  }
+  } */
   
-  .wrapper {
+  /* .wrapper {
     width: 100%;
     min-height: 100%;
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-  }
+  } */
   
   header {
     border-bottom: 1px solid #ccc;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 0 1%;
+    background-color: rgb(32, 17, 16);
+  }
+
+  nav {
+      padding-top: 10px;
+      padding-left: 10px;
+  }
+
+  nav a {
+    padding: 10px;
+  }
+
+  #main-header {
+    background-color:rgb(220, 233, 213);
+    border: 2px solid rgb(220, 233, 213);
+    border-radius: 10px;
+    box-shadow: 5px 5px #888888;
+    color: rgb(32, 17, 16);
+    padding: 1px;
+
   }
   
   header h1 {
-    font-size: 1em;
+    font-size: 2em;
+    padding-left: 20px;
   }
   
   main {
     flex: 1;
     padding: 2% 4%;
+    background-color: rgb(220, 233, 213);
   }
   
   .btn-no-style {
     background: none;
     border: none;
-    padding: 0;
+    padding: 10px;
     cursor: pointer;
     text-decoration: none;
-    color: #225ca3;
+    color: rgb(220, 233, 213);
     font-size: 100%;
     font-weight: bold;
     transition: color .1s;
-    margin-left: 16px;
   }
   
   .btn-no-style:hover {
     background: none;
-    color: #3486eb;
+    color: rgba(220, 233, 213, 0.5);
   }
   
-  .delete-post-btn {
+  /* .delete-post-btn {
     background-color: #d41414;
-  }
+  } */
   
-  .delete-post-btn:hover {
+  /* .delete-post-btn:hover {
     background-color: #ff643d;
-  }
+  } */
   
-  .post {
+  /* .post {
     margin-bottom: 2%;
     line-height: 150%;
+  } */
+
+
+  .post {
+      border: 2px solid rgb(32, 17, 16);
+      margin-bottom: 10px;
+  }
+
+  .post .title {
+      padding-top: 5px;
+      padding-bottom: 5px;
+      background-color: rgb(32, 17, 16);
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding: 12px;
   }
   
   .post .title span {
@@ -127,47 +161,51 @@
     font-size: 90%;
     color: #7d7d7d;
   }
+
+  .meta {
+      padding-left: 10px;
+  }
   
-  .edit-link {
+  /* .edit-link {
     display: block;
     margin: -1.5% 0 2% 0;
-  }
+  } */
   
-  .upvote-btn {
+  /* .upvote-btn {
     background-color: #197d0f;
     transition: background-color .1s;
-  }
+  } */
   
-  .upvote-btn:hover {
+  /* .upvote-btn:hover {
     background-color: #1f9c13;
-  }
+  } */
   
-  .comment-form {
+  /* .comment-form {
     margin-bottom: 5%;
-  }
+  } */
   
-  .comment {
+  /* .comment {
     padding: 1%;
     margin-bottom: 1%;
-  }
+  } */
   
-  .comment:nth-child(odd) {
+  /* .comment:nth-child(odd) {
     background-color: #fff5eb;
-  }
+  } */
   
-  .comment .meta {
+  /* .comment .meta {
     font-size: 90%;
     margin-bottom: .5%;
     opacity: .6;
-  }
+  } */
   
-  .new-post-form input {
+  /* .new-post-form input {
     width: 300px;
-  }
+  } */
   
-  .edit-post-form {
+  /* .edit-post-form {
     margin-bottom: 5%;
-  }
+  } */
 
   
   footer {
