--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,17 +11,18 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>
-        <a href="/">Tech Blog</a>
-      </h1>
       <nav>
-        <a href="/dashboard">dashboard</a>
+        <a href="/">Home</a>
+        <a href="/dashboard">Dashboard</a>
         {{#if loggedIn}}
-        <button id="logout" class="btn-no-style">logout</button>
+        <button id="logout" class="btn-no-style">Logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a href="/login">Login</a>
         {{/if}}
       </nav>
+      <h1>
+        <a href="/" id="main-header">The Tech Blog</a>
+      </h1>
     </header>
     <main>
       {{{ body }}}
