--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<form class="signup-form">
+<form class="sign-form">
   <div>
     <label for="username-signup">username:</label>
     <input type="text" id="username-signup" />
@@ -11,9 +11,7 @@
     <label for="password-signup">password:</label>
     <input type="password" id="password-signup" />
   </div>
-  <div>
-    <button type="submit">signup</button>
-  </div>
+  <button type="submit">signup</button>
 </form>
 Already have an account? <a href="/login">login</a> here!
 
