--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -5,9 +5,8 @@
   <div>
     <textarea name="comment-body"></textarea>
   </div>
-
   <div>
-    <button type="submit">add comment</button>
+    <button type="submit" id="comment-btn">add comment</button>
   </div>
 </form>
 {{/if}}
