--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,14 +1,16 @@
-<section>
-  <a href="/new-post">Create New Post</a>
+
+  <div class="new-post-div">
+  <a href="/new-post" id="new-post-btn">Create New Post</a>
+  </div>
 
 {{#if posts.length}}
 <section>
   <ol>
     {{#each posts as |post|}}
     <li>
-        <div class="title">
+        <div class="dashboard-title">
         <a href="/dashboard/edit/{{id}}">{{title}}</a>
-        <span>posted by {{user.username}} on {{format_date created_at}}</span>
+        <span>{{format_date created_at}}</span>
       </div>
     </li>
     {{/each}}
