--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,20 +1,22 @@
 <article>
   <a href="/dashboard"> &larr; Back to dashboard</a>
-  <h2>
-    Edit Post
-  </h2>
   <form class="edit-post-form">
+    <div class="title">
+      <span>Edit Post</span>
+    </div>
+    <div class="new-post-content">
     <div>
-      <input name="post-title" type="text" value="{{post.title}}" />
-      <span>({{post.body}})</span>
+      <input name="post-title" type="text" value="{{post.title}}"/>
+      <p>{{post.body}}</p>
     </div>
     <div>
-      {{post.vote_count}} {{format_plural "point" post.vote_count}} by you on {{format_date post.created_at}}
+      posted by you on {{format_date post.created_at}}
       |
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
     <button type="submit">Save post</button>
     <button type="button" class="delete-post-btn">Delete post</button>
+    </div>
   </form
 </article>
 
