--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,13 +5,13 @@
     </div>
     <div>
         <label for="password-login">password:</label>
-        <input type="text" id="password-login" />
+        <input type="password" id="password-login" />
     </div>
     <div>
         <button type="submit">login</button>
     </div>
 </form>
-<a href="/signup">Sign Up</a>
+<a href="/signup">Sign Up instead</a>
 
 <script src="/javascript/login.js"></script>
 
