--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,13 +1,19 @@
   <form class="new-post-form">
+    <div class="title">
+      <span>Create New Post</span>
+    </div>
+    <div class="new-post-content">
     <div>
       <label for="post-title">Title</label>
       <input type="text" id="post-title" name="post-title" />
     </div>
     <div>
       <label for="post-body">Body</label>
-      <input id="post-body" name="post-body" />
+      <textarea id="post-body" name="post-body">
+      </textarea>
     </div>
     <button type="submit" class="btn">Create</button>
+    </div>
   </form>
 </section>
 <script src="/javascript/add-post.js"></script>
